# pythonpackage

./: pyproject.toml
.github/workflows/: sync-experimental.yaml
src/testwill3838/: example.py
testwill3838/: example.py
