[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testwill3838"
version = "0.0.5"
authors = [
  { name="William", email="william@cohere.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
